--- a/package.json
+++ b/package.json
@@ -17,11 +17,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
-    "multer": "^1.4.4",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer": "^1.4.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
